add popover adn some styles

--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,21 @@
 			>You need to enable JavaScript to run this app.</noscript
 		>
 		<div id="root"></div>
+		<script
+			src="https://unpkg.com/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+			charset="utf-8"
+		></script>
+		<script>
+			var popoverTriggerList = [].slice.call(
+				document.querySelectorAll(
+					'[data-bs-toggle="popover"]'
+				)
+			);
+			var popoverList = popoverTriggerList.map(function (
+				popoverTriggerEl
+			) {
+				return new Popover(popoverTriggerEl);
+			});
+		</script>
 	</body>
 </html>
