--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="favicon.ico" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+		/>
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1"
@@ -20,21 +24,5 @@
 			>You need to enable JavaScript to run this app.</noscript
 		>
 		<div id="root"></div>
-		<script
-			src="https://unpkg.com/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-			charset="utf-8"
-		></script>
-		<script>
-			var popoverTriggerList = [].slice.call(
-				document.querySelectorAll(
-					'[data-bs-toggle="popover"]'
-				)
-			);
-			var popoverList = popoverTriggerList.map(function (
-				popoverTriggerEl
-			) {
-				return new Popover(popoverTriggerEl);
-			});
-		</script>
 	</body>
 </html>
